     baujat.rma(), which now handles objects of class 'rma.uni', 'rma.mh',
     and 'rma.peto'

   o baujat.rma() gains argument 'symbol' for more control over the plotting
     symbol

   o in the extreme case where all observed outcomes are exactly equal to
     each other, using knha=TRUE in rma() now leads to appropriate results

   o some general code cleanup

   o added more tests


Changes in Version 1.9-8 (2015-09-28)
=====================================

   o due to more stringent package testing, it is increasingly difficult to
     ensure that the package passes all checks on older versions of R; from
     now on, the package will therefore require, and be checked under, only
     the current (and the development) version of R

   o added graphics, grDevices, and methods to Imports (due to recent change
     in how CRAN checks packages)

   o the 'struct' argument for rma.mv() now also allows for "ID" and "DIAG",
     which are identical to the "CS" and "HCS" structures, but with the
     correlation parameter fixed to 0

   o added robust() for (cluster) robust tests and confidence intervals for
     'rma.uni' and 'rma.mv' models (this uses a robust sandwich-type
     estimator of the variance-covariance matrix of the fixed effects along
     the lines of the Eicker-Huber-White method)

   o confint() now works for models fitted with the rma.mv() function; for
     variance and correlation parameters, the function provides profile
     likelihood confidence intervals; the output generated by the confint()
     function has been adjusted in general to make the formatting more
     consistent across the different model types

   o for objects of class 'rma.mv', profile() now provides profile plots for
     all (non-fixed) variance and correlation components of the model when
     no component is specified by the user (via the sigma2, tau2, rho,
     gamma2, or phi arguments)

   o for measure="MD" and measure="ROM", one can now choose between