@@ -977,19 +977,19 @@
    uu <- min(n1, m1)
 
    if (n1 < 0 | n2 < 0)
-      stop("n1 or n2 negative in dnoncenhypergeom().\n")
+      stop("'n1' or 'n2' negative in dnoncenhypergeom().\n")
 
    if (m1 < 0 | m1 > (n1 + n2))
-      stop("m1 out of range in dnoncenhypergeom().\n")
+      stop("'m1' out of range in dnoncenhypergeom().\n")
 
    if (psi <= 0)
-      stop("psi [odds ratio] negative in dnoncenhypergeom().\n")
+      stop("'psi' [odds ratio] negative in dnoncenhypergeom().\n")
 
    if (!is.na(x) & (x < ll | x > uu))
-      stop("x out of bounds in dnoncenhypergeom().\n")
+      stop("'x' out of bounds in dnoncenhypergeom().\n")
 
    if (!is.na(x) & length(x) > 1)
-      stop("x neither missing or scalar in dnoncenhypergeom().\n")
+      stop("'x' neither missing or scalar in dnoncenhypergeom().\n")
 
    mode <- mode.compute(n1, n2, m1, psi, ll, uu)
    pi <- array(1, uu - ll + 1)
